@@ -132,7 +132,9 @@ class PharosTargetCofactorProvider(StashableBase):
             if not chaP.hasTargetActivity(pharosId):
                 logger.debug("Skipping target %r (%r)", unpId, pharosId)
                 continue
-            #
+            # --
+            description = chaP.getTargetInfo(pharosId, "description")
+            # --
             for matchD in matchDL:
                 tL = matchD["target"].split("|")
                 entryId = tL[0].split("_")[0]
@@ -172,6 +174,7 @@ class PharosTargetCofactorProvider(StashableBase):
                     "query_uniprot_id": unpId,
                     "query_id": pharosId,
                     "query_id_type": "Pharos",
+                    "query_name": description,
                     "provenance_source": provenanceSource,
                     "reference_scheme": refScheme,
                     "assignment_version": assignVersion,
