@@ -24,3 +24,4 @@
   23-Jun-2021  - V0.32 Add preprocessing filter to Pharos SQL dump input and handle missing ChEMBL API results more gracefully
   24-Jun-2021  - V0.33 Get release versions from data source for ChEMBL, DrugBank and Pharos and propagate these in all resource files
   24-Jun-2021  - V0.34 Add getVersion() method in PharosTargetProvider() module
+  25-Jun-2021  - V0.35 Add a target_name attributed to Pharos, DrugBank and ChEMBL cofactor data.
